Remove experimental parameter as FFM is no longer experimental